--- a/views/admin/login.html
+++ b/views/admin/login.html
@@ -1,46 +1,59 @@
 <!DOCTYPE html>
-<html lang="zh-cn" class="no-js">
+<html lang="zh-CN">
 <head>
-<meta charset="UTF-8" >
+<meta charset="UTF-8">
 <meta name="renderer" content="webkit">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<title>后台登录</title>
-<link rel="stylesheet" type="text/css" href="/public/login/css/normalize.css" />
-<link rel="stylesheet" type="text/css" href="/public/login/css/demo.css" />
-<!--必要样式-->
-<link rel="stylesheet" type="text/css" href="/public/login/css/component.css" />
-<!--[if IE]>
-<script src="js/html5.js"></script>
-<![endif]-->
+<meta name="description" content="小涛博客的登录界面,登录后台管理中心">
+<meta name="keywords" content="博客登录页面,后台管理,账号登录">
+<meta name="baidu-site-verification" content="H91h9G7RRd">	
+<meta name="author" content="shixtao">
+<link rel="stylesheet" href="/public/login/css/base.css">
+<link rel="stylesheet" href="/public/login/css/iconfont.css">
+<link rel="stylesheet" href="/public/login/css/reg.css">
+<link href="/public/home/images/favicon.ico" rel="shortcut icon" type="image/x-icon">
+<title>欢迎登录</title>
 </head>
 <body>
-		<div class="container demo-1">
-				<div class="content">
-					<div id="large-header" class="large-header">
-						<canvas id="demo-canvas"></canvas>
-						<div class="logo_box">
-							<h3>欢迎登录后台管理中心</h3>
-							<form action="/admin/check" name="f" method="post">
-								<div class="input_outer">
-									<span class="u_user"></span>
-									<input name="adminname"  required class="text" style="color: #FFFFFF !important" type="text" placeholder="请输入账户">
-								</div>
-								<div class="input_outer">
-									<span class="us_uer"></span>
-									<input name="password" required  class="text" style="color: #FFFFFF !important; position:absolute; z-index:100;"value="" type="password" placeholder="请输入密码">
-								</div>
-								<div class="mb2">
-									<button type="submit" style="color: #FFFFFF;border:0;width:100%" class="act-but submit">登录</button>
-								</div>
-							</form>
-						</div>
-					</div>
-				</div>
-		</div><!-- /container -->
-<script src="/public/login/js/TweenLite.min.js"></script>
-<script src="/public/login/js/EasePack.min.js"></script>
-<script src="/public/login/js/rAF.js"></script>
-<script src="/public/login/js/demo-1.js"></script>
+<div id="ajax-hook"></div>
+<div class="wrap">
+    <div class="wpn">
+        <div class="form-data pos">
+            <a href="/"><img src="/public/login/images/logo1.png" class="head-logo"></a>
+            <div class="change-login">
+                <p class="account_number on"><b>登录到博客后台管理中心</b></p>
+            </div>
+            <div class="form">
+                <form id="form">
+                <p class="p-input pos">
+                    <input type="text" id="admin" name="adminname" minlength="6" autocomplete="off" required placeholder="请输入管理员名">
+                    <span class="name-warn name hide"><em>用户名不存在，请重新输入</em><i class="icon-warn"></i></span>
+                </p>
+                <p class="p-input pos">
+                    <input type="password" placeholder="请输入密码" autocomplete="off" minlength="8" id="pass" name="password" required> 
+                    <span class="name-warn pass hide"><em>密码错误，请重新输入</em><i class="icon-warn"></i></span>
+                </p>
+            </div>
+            <div class="r-forget cl">
+                <a href="javascript:alert('请联系博主获取后台管理账号')" class="z">账号注册</a>
+            </div>
+            <div class="r-forget cl radio">
+            <input type="checkbox" id="radio">&nbsp;记住密码
+            </div>
+            <button class="lang-btn log-btn" type="submit">登录</button>
+            </form>
+            <div class="third-party">
+                <a href="javascript:alert('QQ登录开发中，敬请期待')" class="log-qq icon-qq-round"></a>
+                <a href="javascript:alert('微信登录开发中，敬请期待')" class="log-qq icon-weixin"></a>
+            </div><br>
+            <p style="text-align: center;">Copyright &copy; Shixtao All rights reserved.<br><br>
+            Powered By express 4
+            </p>
+        </div>
+    </div>
+</div>
+<script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
+<script src="/public/login/js/agree.js"></script>
 </body>
 </html>
