--- a/views/home/article.html
+++ b/views/home/article.html
@@ -41,10 +41,10 @@
 			    <header class="blog-post-header">
 				    <h2 class="title mb-2"><%= blog.title %></h2>
 					<div class="meta mb-3">
+                        <i class="iconfont icon-bokeyuan"></i>
+                        <span class="type"><%= blog.type %>&nbsp;<span class="text-info"><%= list.name %></span></span>                       
 						<i class="iconfont icon-shizhong"></i>
-						<span class="date"><%= blog.time %></span>
-						<i class="iconfont icon-bokeyuan"></i>
-						<span class="text-info"><%= list.name %></span>
+						<span class="date"><%= blog.time %></span>						
 						<i class="iconfont icon-renyuan"></i>
 						<span class="author"><%= blog.author %></span>
 						<i class="iconfont icon-pinglun"></i>
@@ -70,6 +70,8 @@
                                 <option value="/public/home/images/p4.png">头像4</option>
                                 <option value="/public/home/images/p5.png">头像5</option>
                                 <option value="/public/home/images/p6.png">头像6</option>
+                                <option value="/public/home/images/p7.png">头像7</option>
+                                <option value="/public/home/images/p8.png">头像8</option>
                             </select>
                         </label>
                         <span><img src="/public/home/images/p1.png" id="face" class="face" alt="face" width="50" height="50"></span>
@@ -94,7 +96,7 @@
                                     <small><%= comment.time %></small>   
                                 </div>
                                 <div class="floor">
-                                    <p><%= comment.id %>楼</p>
+                                    <p onclick="alert('请联系作者！')" style="cursor:pointer;">举报</p>
                                     <p><a href="#<%= comment.id %>" onclick="reply('<%= comment.id %>')">回复</a></p>                       
                                 </div>
                                     <% for (let reply of replys) { %>
@@ -124,6 +126,8 @@
                                                     <option value="/public/home/images/p4.png">头像4</option>
                                                     <option value="/public/home/images/p5.png">头像5</option>
                                                     <option value="/public/home/images/p6.png">头像6</option>
+                                                    <option value="/public/home/images/p7.png">头像7</option>
+                                                    <option value="/public/home/images/p8.png">头像8</option>
                                                 </select>
                                             </label>
                                             <span><img src="/public/home/images/p1.png" class="face" id="<%= comment.id %>replyface" alt="face" width="50" height="50"></span>
