--- a/views/home/index.html
+++ b/views/home/index.html
@@ -12,10 +12,9 @@
 			    <div class="intro">欢迎您的访问！期待您留下宝贵的意见</div>
 			    <form class="signup-form form-inline justify-content-center pt-3">
                     <div class="form-group" style="margin: 0;">
-                        <label class="sr-only" for="semail">Your email</label>
-                        <input type="email" id="semail" name="semail1" class="form-control mr-md-1 semail" placeholder="Enter email">
+                        <input type="text" id="" name="" class="form-control mr-md-1 " placeholder="输入您想搜索的文章">
                     </div>
-                    <button type="submit" class="btn btn-primary">Subscribe</button>
+                    <button type="submit" class="btn btn-primary">搜索</button>
                 </form>
 		    </div>
 	    </section>
@@ -27,14 +26,25 @@
 					    <img class="mr-3 img-fluid post-thumb d-none d-md-flex" src="<%= data.img %>" alt="博客封面图">
 					    <div class="media-body">
 						    <h3 class="title mb-1"><a href="/article/<%= data.id %>"><%= data.title %></a></h3>
-							<div class="meta mb-1"><i class="iconfont icon-shizhong"></i>
-								<span class="date"><%= data.time %></span>
+							<div class="meta mb-1">
+								<i class="iconfont icon-bokeyuan"></i>
+						<span title="博客类型"><%= data.type %>&nbsp;
+							<span class="text-info">
+								<% for(let list of lists){ %>
+									<% if(data.cid === list.id){ %>
+									<%= list.name %>
+									<% } %>
+								<% } %>
+							</span>
+						</span>
+								<i class="iconfont icon-shizhong"></i>
+								<span title="发表时间"><%= data.time %></span>
 								<i class="iconfont icon-renyuan"></i>
-								<span class="author"><%= data.author %></span>
+								<span title="博客作者"><%= data.author %></span>
 								<i class="iconfont icon-pinglun"></i>
-								<span class="comment"><a href="/article/<%= data.id %>#form"><%= data.comment %> 评论</a></span>
+								<span title="评论"><a href="/article/<%= data.id %>#form"><%= data.comment %> 评论</a></span>
 								<i class="iconfont icon-liulan"></i>
-								<span class="comment"><%= data.click %></span>
+								<span title="浏览量"><%= data.click %></span>
 							</div>
 						    <div class="intro"><%= data.description %></div>
 						    <a class="more-link" href="/article/<%= data.id %>">更多内容 &rarr;</a>
