--- a/views/home/public/header.html
+++ b/views/home/public/header.html
@@ -7,10 +7,10 @@
         <div id="navigation" class="collapse navbar-collapse flex-column" >
             <div class="profile-section pt-3 pt-lg-0">
                 <img class="profile-image mb-3 rounded-circle mx-auto" src="<%= webConfig.logo %>" alt="小涛,帅哥,logo图" width="120px" height="120px" >								
-                <div class="bio mb-3">Hi, 欢迎访问我的博客<br><a href="https://gitee.com/littlestoney/blog" target="_blank">本博客源代码地址</a>，欢迎star</div>
+                <div class="bio mb-3">Hi，欢迎访问我的博客，和我一起学习<strong>Web前端</strong>和<strong>TypeScript</strong>知识吧！<br><a href="https://gitee.com/littlestoney/blog" target="_blank">本博客源代码地址</a>，欢迎star</div>
                 <ul class="social-list list-inline py-3 mx-auto">
-                    <li class="list-inline-item"><a href="#"><i class="iconfont icon-qq"></i></a></li>
-                    <li class="list-inline-item"><a href="#"><i class="iconfont icon-weixin"></i></a></li>
+                    <li class="list-inline-item"><a href="javascript:void(0)" title="1085813343"><i class="iconfont icon-qq"></i></a></li>
+                    <li class="list-inline-item"><a href="javascript:void(0)" title="13088183198"><i class="iconfont icon-weixin"></i></a></li>
                     <li class="list-inline-item"><a href="https://gitee.com/littlestoney" target="_blank"><i class="iconfont icon-github"></i></a></li>
                     <li class="list-inline-item"><a href="mailto:Shixtao@qq.com"><i class="iconfont icon-youxiang"></i></a></li>
                 </ul>
@@ -21,15 +21,12 @@
                     <a class="nav-link" href="/"><i class="iconfont icon-shouye"></i>&nbsp;博客首页<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="blog-post.html"><i class="iconfont icon-bokeyuan"></i>&nbsp;博客管理</a>
+                    <a class="nav-link" href="/admin"><i class="iconfont icon-bokeyuan"></i>&nbsp;博客管理</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="about.html"><i class="iconfont icon-guanyu"></i>&nbsp;关于作者</a>
+                    <a class="nav-link" href="javascript:alert('小白一个，低调为主')"><i class="iconfont icon-guanyu"></i>&nbsp;关于作者</a>
                 </li>
             </ul>				
-            <div class="my-2 my-md-3">
-                <a class="btn btn-primary" href="#" target="_blank">Get in Touch</a>
-            </div>
         </div>
     </nav>
 </header>
