--- a/views/home/article.html
+++ b/views/home/article.html
@@ -39,7 +39,9 @@
 	    <article class="blog-post px-3 py-5 p-md-5">
 		    <div class="container">
 			    <header class="blog-post-header">
-				    <h2 class="title mb-2"><%= blog.title %></h2>
+				    <h2 class="title mb-2">
+                    <b><%= blog.title %></b>
+                    </h2>
 					<div class="meta mb-3">
                         <i class="iconfont icon-bokeyuan"></i>
                         <span class="type"><%= blog.type %>&nbsp;<span class="text-info"><%= list.name %></span></span>                       
