--- a/views/home/index.html
+++ b/views/home/index.html
@@ -69,6 +69,7 @@
 	<%- include('./public/color.html') %>
 <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
 <script src="/public/home/js/style.js"></script>
+<script defer src="/public/home/js/bootstrap.min.js"></script>
 </body>
 </html> 
 
