--- a/views/home/public/color.html
+++ b/views/home/public/color.html
@@ -1,4 +1,4 @@
-<div id="config-panel" class="config-panel d-none d-lg-block">
+<div id="config-panel" class="config-panel d-lg-block">
     <div class="panel-inner">
         <a id="config-trigger" class="config-trigger config-panel-hide text-center" href="#"><i class="iconfont icon-chilun" data-fa-transform="down-6" ></i></a>
         <h5 class="panel-title">选择主题</h5>
