--- a/views/home/public/header.html
+++ b/views/home/public/header.html
@@ -6,10 +6,10 @@
         </button>
         <div id="navigation" class="collapse navbar-collapse flex-column" >
             <div class="profile-section pt-3 pt-lg-0">
-                <img class="profile-image mb-3 rounded-circle mx-auto" src="<%= webConfig.logo %>" alt="小涛,帅哥,logo图" width="120px" height="120px" >								
+                <img class="profile-image mb-3 mx-auto" src="<%= webConfig.logo %>" alt="小涛,帅哥,logo图">								
                 <div class="bio mb-3">Hi，欢迎访问我的博客，和我一起学习<strong>Web前端</strong>和<strong>TypeScript</strong>知识吧！<br><a href="https://gitee.com/littlestoney/blog" target="_blank">本博客源代码地址</a>，欢迎star</div>
                 <ul class="social-list list-inline py-3 mx-auto">
-                    <li class="list-inline-item"><a href="javascript:void(0)" title="1085813343"><i class="iconfont icon-qq"></i></a></li>
+                    <li class="list-inline-item"><a href="tencent://message/?uin=1085813343&Site=QQ交谈&Menu=yes" target="blank" title="1085813343"><i class="iconfont icon-qq"></i></a></li>
                     <li class="list-inline-item"><a href="javascript:void(0)" title="13088183198"><i class="iconfont icon-weixin"></i></a></li>
                     <li class="list-inline-item"><a href="https://gitee.com/littlestoney" target="_blank"><i class="iconfont icon-github"></i></a></li>
                     <li class="list-inline-item"><a href="mailto:Shixtao@qq.com"><i class="iconfont icon-youxiang"></i></a></li>
