--- a/views/admin/index.html
+++ b/views/admin/index.html
@@ -13,7 +13,8 @@
     <title>后台管理中心</title>  
     <link rel="stylesheet" href="/public/admin/css/pintuer.css">
     <link rel="stylesheet" href="/public/admin/css/admin.css">
-    <script src="/public/admin/js/jquery.js"></script>   
+    <link rel="shortcut icon" href="/public/home/images/favicon.ico">
+    <script src="/public/admin/js/jquery.js"></script> 
 </head>
 <body style="background-color:#f2f9fd;">
 <div class="header bg-main">
