--- a/views/home/public/head.html
+++ b/views/home/public/head.html
@@ -23,8 +23,9 @@
     <link id="theme-style" rel="stylesheet" href="/public/home/css/index.css">
     <link rel="shortcut icon" href="/public/home/images/favicon.ico">
     <link rel="stylesheet" href="//at.alicdn.com/t/font_1611091_vrwagneyj2.css">
-    <!--[if lt IE 9]>
-        <script src="https://cdn.bootcss.com/html5shiv/r29/html5.min.js"></script>
-        <script src="https://cdn.bootcss.com/respond.js/1.4.2/respond.js"></script>
+    <!--[if lt IE 10]>
+        <p style="text-align:center;color:red;">您的浏览器版本过低，请使用更高版本的浏览器来获取更好的体验！
+        使用<a href="http://www.google.cn/intl/zh-CN/chrome/" target="_blank">Google Chrome</a>
+        </p>
     <![endif]-->
     <title><%= webConfig.title %></title>
