--- a/views/home/index.html
+++ b/views/home/index.html
@@ -10,7 +10,7 @@
 	<div class="main-wrapper">
 		<section class="cta-section theme-bg-light py-5">
 			<div class="container text-center">
-				<h2 class="heading"><strong>小</strong>涛的<strong>博</strong>客 ——— 一个前端爱好者的博客</h2>
+				<h2 class="heading"><span class="logo">shixtao.cn</span> ——— 一个前端爱好者的博客</h2>
 				<div class="intro">欢迎您的访问！期待您留下宝贵的意见</div>
 				<form class="signup-form form-inline justify-content-center pt-3">
 					<div class="form-group" style="margin: 0;">
