--- a/views/home/public/head.html
+++ b/views/home/public/head.html
@@ -4,7 +4,7 @@
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta name="description" content="<%= webConfig.description %>">
 <meta name="keywords" content="<%= webConfig.keywords %>">
-<meta name="baidu-site-verification" content="H91h9G7RRd">
+<!--<meta name="baidu-site-verification" content="H91h9G7RRd">-->
 <meta name="author" content="shixtao">
 <link id="theme-style" rel="stylesheet" href="/public/home/css/index.css">
 <link rel="shortcut icon" href="/public/home/images/favicon.ico">
