--- a/views/home/index.html
+++ b/views/home/index.html
@@ -17,7 +17,7 @@
 						<input type="text" onkeyup="this.value = this.value.trim()" name="search"
 							class="form-control mr-md-1 " placeholder="输入您想搜索的文章">
 					</div>
-					<button type="submit" class="btn btn-primary">搜索</button>
+					<button type="search" class="btn btn-primary">搜索</button>
 				</form>
 			</div>
 		</section>
