--- a/views/home/public/color.html
+++ b/views/home/public/color.html
@@ -1,13 +1,14 @@
-<div id="config-panel" class="config-panel d-lg-block">
+<div id="config-panel" class="config-panel d-lg-block d-none">
     <div class="panel-inner">
-        <a id="config-trigger" class="config-trigger config-panel-hide text-center" href="#"><i class="iconfont icon-chilun" data-fa-transform="down-6" ></i></a>
+        <a id="config-trigger" class="config-trigger config-panel-hide text-center" href="#"><i
+                class="iconfont icon-chilun" data-fa-transform="down-6"></i></a>
         <h5 class="panel-title">选择主题</h5>
         <ul id="color-options" class="list-inline mb-0">
-            <li class="theme-1 active list-inline-item"><a href="javascript:void(0)"></a></li>
+            <li class="theme-1 list-inline-item"><a href="javascript:void(0)"></a></li>
             <li class="theme-2 list-inline-item"><a href="javascript:void(0)"></a></li>
             <li class="theme-3 list-inline-item"><a href="javascript:void(0)"></a></li>
             <li class="theme-4 list-inline-item"><a href="javascript:void(0)"></a></li>
         </ul>
         <a id="config-close" class="close" href="#"><i class="iconfont icon-chahao"></i></a>
     </div>
-</div> 
+</div>
