--- a/views/home/public/footer.html
+++ b/views/home/public/footer.html
@@ -1,4 +1,8 @@
 <footer class="footer text-center py-2 theme-bg-dark">
+    <!-- 回到顶部图标 -->
+    <div class="top">
+        <img src="/public/home/images/top.png" alt="回到顶部图片" title="回到顶部">
+    </div>
     <small>Copyright © 2019 Shixtao</small>
     <br>
     <small><a href="http://www.beian.miit.gov.cn" target="_blank"><%= webConfig.record %></a></small>
