--- a/views/home/public/head.html
+++ b/views/home/public/head.html
@@ -21,7 +21,7 @@
                 'borderColor': color
             })
             $('.list-inline-item a').css('color', color)
-            $('.more-link').css('color', '#6C51A4')
+            $('.more-link').css('color', color)
         }
     }
 </script>
