后台管理登录更改存储密码逻辑

--- a/views/admin/login.html
+++ b/views/admin/login.html
@@ -44,7 +44,7 @@
                             <a href="javascript:alert('请联系博主获取后台管理账号')" class="z">账号注册</a>
                         </div>
                         <div class="r-forget cl radio">
-                            <input type="checkbox" id="radio">&nbsp;记住密码
+                            <input type="checkbox" id="radio" name="isAutoLogin">&nbsp;7天内自动登录
                         </div>
                         <button class="lang-btn log-btn" type="submit">登录</button>
                     </form>
