--- a/app/view/admin/blogs/add.html
+++ b/app/view/admin/blogs/add.html
@@ -131,6 +131,17 @@
           </div>
           <div class="form-group">
             <div class="label">
+              <label for="sitename">是否置顶：</label>
+            </div>
+            <div class="field">
+              <select name="top" class="input">
+                <option value="0">否</option>
+                <option value="1">是</option>
+              </select>
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="label">
               <label for="sitename">博客封面：</label>
             </div>
             <div class="field">
