--- a/app/view/admin/blogs/edit.html
+++ b/app/view/admin/blogs/edit.html
@@ -139,6 +139,17 @@
           </div>
           <div class="form-group">
             <div class="label">
+              <label for="sitename">是否置顶：</label>
+            </div>
+            <div class="field">
+              <select name="top" class="input">
+                <option <%= rows.top == 0 ? 'selected' : '' %> value="0">否</option>
+                <option <%= rows.top == 1 ? 'selected' : '' %> value="1">是</option>
+              </select>
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="label">
               <label for="sitename">博客封面：</label>
             </div>
             <div class="field">
