--- a/app/view/home/index.html
+++ b/app/view/home/index.html
@@ -92,6 +92,9 @@
     <%- include('./public/color.html') %>
     <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
     <script src="/public/home/js/style.js"></script>
-    <script defer src="/public/home/js/bootstrap.min.js"></script>
+    <script
+      defer
+      src="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"
+    ></script>
   </body>
 </html>
