--- a/app/view/admin/blogs/add.html
+++ b/app/view/admin/blogs/add.html
@@ -152,6 +152,7 @@
                 name="img"
                 data-validate="required:请选择封面图片！"
               />
+              <div id="img"></div>
             </div>
           </div>
           <div class="form-group">
@@ -184,5 +185,18 @@
   <script>
     //实例化编辑器
     var ue = UE.getEditor("editor");
+
+    // HTML5 File API 显示图片
+    var reader = new FileReader();
+    var img = new Image();
+    var input = document.querySelector('input[type=file]');
+    input.addEventListener('change', function (e) {
+      var file = this.files[0];
+      reader.readAsDataURL(file);
+    });
+    reader.onload = function (e) {
+      img.src = this.result;
+    };
+    document.getElementById('img').appendChild(img);
   </script>
 </html>
