--- a/app/view/home/article.html
+++ b/app/view/home/article.html
@@ -80,6 +80,7 @@
           <div class="blog-post-body">
             <%- blog.content %>
           </div>
+          <!-- 评论区 -->
           <h4 class="comment">评论区</h4>
           <form id="form">
             <fieldset>
@@ -186,6 +187,87 @@
                       <%= reply.content %><br />
                       <small><%= reply.time %></small>
                     </span>
+                    <span style="float: right;">
+                      <p onclick="alert('请联系作者！')" style="cursor: pointer;">
+                        举报
+                      </p>
+                      <p>
+                        <a
+                          href="#<%= reply.id %>"
+                          onclick="reply('<%= comment.id %>','<%= reply.name %>')"
+                          >回复</a
+                        >
+                      </p>
+                    </span>
+                    <div class="replyedit">
+                      <form id="<%= reply.id %>" style="display: none;">
+                        <fieldset>
+                          <div class="form-group">
+                            <label
+                              >输入大名：<input
+                                type="text"
+                                required
+                                id="<%= reply.id %>name"
+                                maxlength="6"
+                            /></label>
+  
+                            <label
+                              >选择头像：
+                              <select
+                                id="<%= reply.id %>replyface"
+                                onchange="document.images['<%= reply.id %>replyface'].src=options[selectedIndex].value;"
+                              >
+                                <option value="/public/home/images/p1.png"
+                                  >头像1</option
+                                >
+                                <option value="/public/home/images/p2.png"
+                                  >头像2</option
+                                >
+                                <option value="/public/home/images/p3.png"
+                                  >头像3</option
+                                >
+                                <option value="/public/home/images/p4.png"
+                                  >头像4</option
+                                >
+                                <option value="/public/home/images/p5.png"
+                                  >头像5</option
+                                >
+                                <option value="/public/home/images/p6.png"
+                                  >头像6</option
+                                >
+                                <option value="/public/home/images/p7.png"
+                                  >头像7</option
+                                >
+                                <option value="/public/home/images/p8.png"
+                                  >头像8</option
+                                >
+                              </select>
+                            </label>
+                            <span
+                              ><img
+                                src="/public/home/images/p1.png"
+                                class="face"
+                                id="<%= reply.id %>replyface"
+                                alt="face"
+                                width="50"
+                                height="50"
+                            /></span>
+  
+                            <textarea
+                              id="<%= reply.id %>reply"
+                              rows="3"
+                              class="form-control"
+                              maxlength="50"
+                              placeholder="回复区"
+                            ></textarea>
+                          </div>
+                          <button type="submit" class="btn btn-primary">
+                            回复
+                          </button>
+                          <br /><br />
+                        </fieldset>
+                      </form>
+                    </div>
                   </div>
                   <% } %> <% } %>
                   <div class="replyedit">
