--- a/app/view/home/article.html
+++ b/app/view/home/article.html
@@ -346,9 +346,21 @@
           </table>
         </div>
       </article>
+      
       <%- include('./public/footer.html') %>
     </div>
     <%- include('./public/color.html') %>
+    <div class="toast" role="alert" aria-live="assertive" aria-atomic="true" data-delay="2000" style="position:fixed;top: 20px; right: 20px;">
+      <div class="toast-header">
+        <strong class="mr-auto">通知</strong>
+        <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="toast-body">
+        评论成功！
+      </div>
+    </div>
     <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
     <script src="/public/home/js/style.js"></script>
     <script src="/public/ueditor/third-party/highlight/highlight.pack.js"></script>
