--- a/app/view/home/article.html
+++ b/app/view/home/article.html
@@ -80,7 +80,7 @@
           <div class="blog-post-body">
             <%- blog.content %>
           </div>
-          <!-- 评论区 -->
+          <!-- 评论区编辑区 -->
           <h4 class="comment">评论区</h4>
           <form id="form">
             <fieldset>
@@ -118,7 +118,6 @@
                     width="50"
                     height="50"
                 /></span>
-
                 <textarea
                   name="comment"
                   rows="3"
@@ -134,143 +133,30 @@
               <br /><br />
             </fieldset>
           </form>
+          <!-- 评论展示区 -->
           <table class="table">
             <tbody>
-              <% for (let comment of comments) { %>
+              <% comments.forEach(comment => { %>
               <tr>
                 <td>
-                  <div class="touxiang">
-                    <img
-                      src="<%= comment.face %>"
-                      alt="人物头像"
-                      width="50"
-                      height="50"
-                    />
-                    <div><%= comment.name %></div>
-                  </div>
-                  <div class="content">
-                    <%= comment.content %>
-                    <br />
-                    <small><%= comment.time %></small>
-                  </div>
-                  <div class="floor">
-                    <p onclick="alert('请联系作者！')" style="cursor: pointer;">
-                      举报
-                    </p>
-                    <p>
-                      <a
-                        href="#<%= comment.id %>"
-                        onclick="reply('<%= comment.id %>','<%= comment.name %>')"
-                        >回复</a
-                      >
-                    </p>
-                  </div>
-                  <% for (let reply of replys) { %> <% if(reply.reply_id ===
-                  comment.id){ %>
-                  <div class="reply_area">
-                    <span class="reply_info">
+                    <div class="touxiang">
                       <img
-                        src="<%= reply.face %>"
+                        src="<%= comment.face %>"
                         alt="人物头像"
                         width="50"
                         height="50"
                       />
-                      <span
-                        ><%= reply.name %><span class="text-info"
-                          >&nbsp;回复&nbsp;</span
-                        ><span id="<%= comment.id %>toname"
-                          ><%= comment.name %></span
-                        >:</span
-                      >
-                    </span>
-                    <span class="reply_content">
-                      <%= reply.content %><br />
-                      <small><%= reply.time %></small>
-                    </span>
-                    <span style="float: right;">
-                      <p onclick="alert('请联系作者！')" style="cursor: pointer;">
-                        举报
-                      </p>
-                      <p>
-                        <a
-                          href="#<%= reply.id %>"
-                          onclick="reply('<%= comment.id %>','<%= reply.name %>')"
-                          >回复</a
-                        >
-                      </p>
-                    </span>
-                    <div class="replyedit">
-                      <form id="<%= reply.id %>" style="display: none;">
-                        <fieldset>
-                          <div class="form-group">
-                            <label
-                              >输入大名：<input
-                                type="text"
-                                required
-                                id="<%= reply.id %>name"
-                                maxlength="6"
-                            /></label>
-  
-                            <label
-                              >选择头像：
-                              <select
-                                id="<%= reply.id %>replyface"
-                                onchange="document.images['<%= reply.id %>replyface'].src=options[selectedIndex].value;"
-                              >
-                                <option value="/public/home/images/p1.png"
-                                  >头像1</option
-                                >
-                                <option value="/public/home/images/p2.png"
-                                  >头像2</option
-                                >
-                                <option value="/public/home/images/p3.png"
-                                  >头像3</option
-                                >
-                                <option value="/public/home/images/p4.png"
-                                  >头像4</option
-                                >
-                                <option value="/public/home/images/p5.png"
-                                  >头像5</option
-                                >
-                                <option value="/public/home/images/p6.png"
-                                  >头像6</option
-                                >
-                                <option value="/public/home/images/p7.png"
-                                  >头像7</option
-                                >
-                                <option value="/public/home/images/p8.png"
-                                  >头像8</option
-                                >
-                              </select>
-                            </label>
-                            <span
-                              ><img
-                                src="/public/home/images/p1.png"
-                                class="face"
-                                id="<%= reply.id %>replyface"
-                                alt="face"
-                                width="50"
-                                height="50"
-                            /></span>
-  
-                            <textarea
-                              id="<%= reply.id %>reply"
-                              rows="3"
-                              class="form-control"
-                              maxlength="50"
-                              placeholder="回复区"
-                            ></textarea>
-                          </div>
-                          <button type="submit" class="btn btn-primary">
-                            回复
-                          </button>
-                          <br /><br />
-                        </fieldset>
-                      </form>
+                      <div><%= comment.name %></div>
                     </div>
-                  </div>
-                  <% } %> <% } %>
-                  <div class="replyedit">
+                    <div class="content">
+                      <%= comment.content %>
+                      <br />
+                      <small><%= comment.time %></small>
+                    </div>
+                    <div class="floor">
+                      <p onclick="alert('请联系作者！')" style="cursor: pointer;">举报</p>
+                      <p><a href="#<%= comment.id %>" onclick="reply('<%= comment.id %>','<%= comment.id %>','<%= comment.name %>')">回复</a></p>
+                    </div>
                     <form id="<%= comment.id %>" style="display: none;">
                       <fieldset>
                         <div class="form-group">
@@ -278,14 +164,13 @@
                             >输入大名：<input
                               type="text"
                               required
-                              id="<%= comment.id %>name"
                               maxlength="6"
                           /></label>
 
                           <label
                             >选择头像：
                             <select
-                              id="<%= comment.id %>replyface"
+                              name="face"
                               onchange="document.images['<%= comment.id %>replyface'].src=options[selectedIndex].value;"
                             >
                               <option value="/public/home/images/p1.png"
@@ -318,14 +203,12 @@
                             ><img
                               src="/public/home/images/p1.png"
                               class="face"
-                              id="<%= comment.id %>replyface"
                               alt="face"
                               width="50"
                               height="50"
+                              id="<%= comment.id %>replyface"
                           /></span>
-
                           <textarea
-                            id="<%= comment.id %>reply"
                             rows="3"
                             class="form-control"
                             maxlength="50"
@@ -338,10 +221,114 @@
                         <br /><br />
                       </fieldset>
                     </form>
+                  <% replies.forEach(reply => { %>
+                  <% if(comment.id === reply.reply_id ) { %>
+                  <div class="hf">
+                    <div class="reply_area">
+                      <span class="reply_info">
+                        <img
+                          src="<%= reply.face %>"
+                          alt="人物头像"
+                          width="50"
+                          height="50"
+                        />
+                        <span
+                          ><%= reply.name %><span class="text-info"
+                            >&nbsp;回复&nbsp;</span
+                          ><span><%= reply.reply_name %></span>:</span>
+                      </span>
+                      <span class="reply_content">
+                        <%= reply.content %><br />
+                        <small><%= reply.time %></small>
+                      </span>
+                      <span style="float: right;">
+                        <p onclick="alert('请联系作者！')" style="cursor: pointer;">
+                          举报
+                        </p>
+                        <p>
+                          <a
+                            href="#<%= reply.id %>"
+                            onclick="reply('<%= reply.id %>','<%= comment.id %>','<%= reply.name %>')"
+                            >回复</a
+                          >
+                        </p>
+                      </span>
+                      <div class="replyedit">
+                        <form id="<%= reply.id %>" style="display: none;">
+                          <fieldset>
+                            <div class="form-group">
+                              <label
+                                >输入大名：<input
+                                  type="text"
+                                  required
+                                  id="<%= reply.id %>name"
+                                  maxlength="6"
+                              /></label>
+    
+                              <label
+                                >选择头像：
+                                <select
+                                 name="face"
+                                  id="<%= reply.id %>replyface"
+                                  onchange="document.images['<%= reply.id %>replyface'].src=options[selectedIndex].value;"
+                                >
+                                  <option value="/public/home/images/p1.png"
+                                    >头像1</option
+                                  >
+                                  <option value="/public/home/images/p2.png"
+                                    >头像2</option
+                                  >
+                                  <option value="/public/home/images/p3.png"
+                                    >头像3</option
+                                  >
+                                  <option value="/public/home/images/p4.png"
+                                    >头像4</option
+                                  >
+                                  <option value="/public/home/images/p5.png"
+                                    >头像5</option
+                                  >
+                                  <option value="/public/home/images/p6.png"
+                                    >头像6</option
+                                  >
+                                  <option value="/public/home/images/p7.png"
+                                    >头像7</option
+                                  >
+                                  <option value="/public/home/images/p8.png"
+                                    >头像8</option
+                                  >
+                                </select>
+                              </label>
+                              <span
+                                ><img
+                                  src="/public/home/images/p1.png"
+                                  class="face"
+                                  id="<%= reply.id %>replyface"
+                                  alt="face"
+                                  width="50"
+                                  height="50"
+                              /></span>
+                              <textarea
+                                id="<%= reply.id %>reply"
+                                rows="3"
+                                class="form-control"
+                                maxlength="50"
+                                placeholder="回复区"
+                              ></textarea>
+                            </div>
+                            <button type="submit" class="btn btn-primary">
+                              回复
+                            </button>
+                            <br /><br />
+                          </fieldset>
+                        </form>
+                      </div>
+                    </div>
                   </div>
+                  <% } %>
+                  <% }) %>
                 </td>
               </tr>
-              <% } %>
+              <% }) %>
             </tbody>
           </table>
         </div>
