fix: %%% 搜索页页码隐藏优化

--- a/app/view/admin/login.html
+++ b/app/view/admin/login.html
@@ -50,7 +50,7 @@
                         <a href="javascript:alert('微信登录开发中，敬请期待')" class="log-qq icon-weixin"></a>
                     </div><br>
                     <p style="text-align: center;">Copyright &copy; Shixtao All rights reserved.<br><br>
-                        Powered By express 4
+                        Powered By Egg.js
                     </p>
                 </div>
             </div>
