--- a/app/view/home/public/head.html
+++ b/app/view/home/public/head.html
@@ -25,9 +25,9 @@
     }
   }
 </script>
-<!--[if lt IE 11]>
+<!--[if lt IE 10]>
   <p style="text-align: center; color: red;">
-    您的浏览器版本过低，请使用更高版本的浏览器来获取更好的体验！ 使用<a
+    您的IE浏览器版本过低，请使用更高版本的浏览器来获取更好的体验！ 使用<a
       href="http://www.google.cn/intl/zh-CN/chrome/"
       target="_blank"
       >Google Chrome</a
