--- a/app/view/home/public/header.html
+++ b/app/view/home/public/header.html
@@ -73,7 +73,7 @@
           >
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="javascript:alert('小白一个，低调为主')"
+          <a class="nav-link" href="javascript:alert('谢谢你的关注~')"
             ><i class="iconfont icon-guanyu"></i>&nbsp;关于作者</a
           >
         </li>
